2001-03-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-executable-type): Use (eq system-type 'windows-nt)
	for determination of win32.
	(w3m-content-type-alist): Ditto.

2001-03-12  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-which-command): Support executable suffix, `.exe'
	for win32.

2001-03-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-content-type-alist): Add 'use fiber.exe' alist for Windows.
	(w3m-w32-browser-with-fiber): New funciton.

2001-03-12  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-which-command): New function.
	(w3m-external-view): When no viewing method is defined, call
	`w3m-download' as alternative method.  Added check which command
	exists with `w3m-which-command'.

2001-03-12  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-display-inline-image-status): Define as buffer local
	variable.
	(w3m-image-type): New function.
	(w3m-image-type-available-p): Ditto.
	(w3m-create-image): Check image type by `w3m-image-type-available-p'.
	(w3m-exec): Accept all content-types in `w3m-retrieve';
	Make an image only page, if the image can be displayed inline;
	Call `w3m-external-view' if the content-type of retrieved content
	is not text nor image.

2001-03-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-parent-page): Add a postfix '/' to parent-url.

2001-03-12  Takaaki MORIYAMA  <taka@airlab.cs.ritsumei.ac.jp>

	* w3m.el (w3m-extended-charcters-table): Add '\x80'.

2001-03-12  Masatake YAMATO  <masata-y@is.aist-nara.ac.jp>

	* w3m.el (w3m-view-parent-page): New command.
	(w3m-mode-map): Add `w3m-view-parent-page'.

2001-03-10  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* mime-w3m.el (mime-w3m-message-structure): Make variable buffer
	local at top leve.

2001-03-10  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-entity-alist): Eval at compile time.;
	Add character entity references for ISO 8859-1 characters.
